# open-forms

./: .babelrc  .bumpversion.cfg  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .jshintrc  .npmrc  .prettierignore  .prettierrc.json  .readthedocs.yaml  .sdk-release  .travis.yml  AUTHORS  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-extensions  INSTALL.rst  Jenkinsfile  LICENSE.md  README.NL.rst  README.rst  SECURITY.rst  STAKEHOLDERS.md  TODO.md  admin_index.json  babel.config.js  bootstrap.py  client.py  demo.json  design-token-mappings.md  docker-compose-quickstart.yml  docker-compose.yml  docker-init-db.sql  docker-nginx-default.conf  dotenv.example  i18next-scanner.config.js  (+15 more)
.github/: codecov.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  prepare-release.md
.github/workflows/: build-extensions.yml  build-image.yml  ci.yml  code_quality.yml  codeql-analysis.yml  dockerhub-description.yml  fe-code-quality.yml  link-checks.yml  sb.yml  sync-needs-backport.yml  trivy.yml
.storybook/: main.js  preview-body.html  preview-head.html  preview.js  reactIntl.js
cypress/: README.md
cypress/data_fixtures/: ci_data.json
cypress/integration/: submitForm.js
cypress/support/: commands.js
deployment/: README.md  ansible.cfg  app.yml  hosts  hosts.example  sdk.yml
deployment/templates/: file-uploads.conf.tpl  nginx-includes.conf.tpl  sdk-block.conf.j2
doc/: flow.md  index.rst  module_architecture.md  testing.rst
doc/coding_style/: backend.rst  frontend.rst
docker/: docker-compose.camunda.yml  docker-compose.ci.yml  docker-compose.embedding.yml  docker-compose.generic-json.yml  docker-compose.hc-brp-mock.yml  docker-compose.json-dump.yml  docker-compose.json-registration.yml  docker-compose.keycloak.yml  docker-compose.objects-apis.yml  docker-compose.observability.yaml  docker-compose.observability.yml  docker-compose.open-klant.yml  docker-compose.open-zaak.yml  docker-compose.redis-sentinel.yml  docker-compose.referentielijsten.yml  docker-compose.rx-mission.yml  docker-compose.stuf-zds.yml  start_vcr_services.sh
docs/: Camunda DMN.md  changelog-nl.rst  conf.py  index.rst  security.rst  sub_completion.md
log/: .gitkeep
nlx/: .env  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  init-databases.sh  main.py  obtain-certs.sh
patches/: README.md  add-deceased-info-999970173.patch  apply.sh  yubin_001.patch  yubin_002.patch  yubin_003.patch  yubin_004.patch
psycopg2/: _black_version.py  decorator_include.py  django_capture_on_commit_callbacks.py
public/: mockServiceWorker.js
requirements/: base.in  base.txt  ci.txt  dev.in  dev.txt  docs.in  extensions.in  extensions.txt  test-tools.in  type-checking.in  type-checking.txt  utrecht_zds.in  utrecht_zds.txt
src/: basemap-test.py  cartopy-patch-test.py  cartopy-polygon-test.py  cartopy-test.py  formio_structs.py  manage.py  openapi.yaml
tmp/: .gitkeep
(+7503 files in other folders)
